fix score && target overlap - use 87% of progress bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -396,6 +396,7 @@ body {
     background-size: contain;
     pointer-events: none;
     border-radius: 32px;
+    z-index: 11001;
 }
 
 .score-text {
